--- a/client/src/assets/sass/components/_layoutNav.scss
+++ b/client/src/assets/sass/components/_layoutNav.scss
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: space-between;
 
-  // width: 150rem;
+  width: 100%;
   max-width: 150rem;
 }
 
